--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Hankel the hero Draft2 Full</title>
+    <title>Hankel the hero V2</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -25,7 +25,7 @@
 
         <div id="story" class="container">
             <div class="header">
-                <h1>Hankel the hero Draft2 Full</h1>
+                <h1>Hankel the hero V2</h1>
                 <h2 class="byline"></h2>
             </div>
         </div>
