--- a/Draft 3/index.html
+++ b/Draft 3/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Hankel The Herol</title>
+    <title>Hankle the hero</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&family=Eczar&family=Girassol&family=Koulen&family=Martel&family=Merriweather+Sans:ital@0;1&family=Merriweather:ital,wght@0,300;0,400;1,400&family=Montserrat+Alternates:ital@0;1&family=Spartan:wght@400;600&display=swap" rel="stylesheet">
-    
 
 </head>
 
@@ -30,17 +25,14 @@
 
         <div id="story" class="container">
             <div class="header">
-                <h1 class="hide">Hankel The Hero</h1>
-                <h3 class="hankel">Hankel</h3>
-                <h3 class="the">the</h3>
-                <h3 class="hero">Hero</h3>
+                <h1>Hankle the hero</h1>
                 <h2 class="byline"></h2>
             </div>
         </div>
     </div>
 
     <script src="ink.js"></script>
-    <script src="Hankel the hero v3.js"></script>
+    <script src="Hankel the hero V2.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
